# nano-template

./: .clang-format  .clang-tidy  .gitignore  .lldbinit  CHANGES.md  Makefile  README.md  dev.py  post.md  pyproject.toml  setup.py
.github/workflows/: build.yaml  test.yaml
include/micro_liquid/: allocator.h  common.h  context.h  error.h  expression.h  lexer.h  lexer_state.h  node.h  object_list.h  parser.h  py_parse.h  py_template.h  py_token_view.h  py_tokenize.h  string_buffer.h  token.h  unescape.h
include/nano_template/: allocator.h  bytecode.h  common.h  compiler.h  context.h  error.h  expression.h  instructions.h  lexer.h  node.h  parser.h  py_bytecode_view.h  py_compile.h  py_compiled_template.h  py_instruction_view.h  py_parse.h  py_template.h  py_token_view.h  py_tokenize.h  string_buffer.h  token.h  unescape.h  vm.h
py/micro_liquid/: __init__.py  __init__.pyi  _exceptions.py  _micro_liquid.pyi  _native.py  _token_kind.py  _undefined.py
py/nano_template/: __init__.py  __init__.pyi  _nano_template.py  _nano_template.pyi  _pure.py  _token_kind.py  _undefined.py
scripts/: benchmark.py  benchmark_format.py
src/micro_liquid/: allocator.c  context.c  expression.c  lexer.c  module.c  node.c  object_list.c  parser.c  py_parse.c  py_template.c  py_token_view.c  py_tokenize.c  string_buffer.c  unescape.c
src/nano_template/: allocator.c  bytecode.c  compiler.c  context.c  expression.c  instructions.c  lexer.c  module.c  node.c  parser.c  py_bytecode_view.c  py_compile.c  py_compiled_template.c  py_parse.c  py_template.c  py_token_view.c  py_tokenize.c  string_buffer.c  unescape.c  vm.c
tests/: _bytecode.py  test_compile.py  test_compound_expressions.py  test_custom_serializer.py  test_for_tag.py  test_if_tag.py  test_output.py  test_strict_undefined.py  test_tokenize.py  test_unescape.py  test_vm.py
tests/fixtures/001/: data.json  index.template
tests/fixtures/002/: data.json
