[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "micro-liquid-ext"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "build>=1.3.0",
    "pytest>=9.0.0",
]

[tool.setuptools.package-data]
"micro_liquid" = ["**/*.pyi", "py.typed"]
