[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-template"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "abi3audit>=0.0.24",
    "build>=1.3.0",
    "mypy==1.17.1", # XXX: errors with mypy 1.18 and 1.19
    "pyrefly>=0.42.1",
    "pytest>=9.0.0",
    "setuptools>=80.9.0",
    "twine>=6.2.0",
]

[tool.setuptools.package-data]
"nano_template" = ["**/*.pyi", "py.typed"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
files = "py"
local_partial_types = true
no_implicit_optional = true
no_implicit_reexport = true
python_version = "3.12"
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
